envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 8081
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: app
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service1
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: service1
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_2
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_3
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_4
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_5
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_6
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_7
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_8
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_9
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_api_10
                      port_value: 80
